data/derived/comb/progs/unify/prog1720.ml.out
Characters 134-165:
  (Printf.printf "hi %d" carry; )
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type unit
       This is not a function; it cannot be applied.
